changed walking logic
